# CNN_pose_estimation

./: .gitattributes  .gitmodules  README.md  cnn.ipynb
install/: local_setup.sh  setup.sh
install/alg1_pkg/lib/alg1_pkg/: alg1_exe
install/alg1_pkg/share/alg1_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cnn_pkg/lib/cnn_pkg/: get_aruco_exe  get_frames2_exe  get_frames_exe  send_frames_exe  sort_dataset_exe
install/cnn_pkg/share/cnn_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dnn_pkg/lib/dnn_pkg/: dnn_exe
install/dnn_pkg/share/dnn_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dnn_pkg/share/dnn_pkg/cmake/: dnn_pkgConfig.cmake
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.sh  package.sh  package.xml
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: package.sh
install/realsense2_description/share/ament_index/resource_index/parent_prefix_path/: realsense2_description
install/realsense2_description/share/realsense2_description/: local_setup.sh  package.sh
install/ros2_aruco/share/ros2_aruco/: package.sh  package.xml
install/ros2_aruco/share/ros2_aruco/config/: aruco_parameters.yaml
install/ros2_aruco_interfaces/include/ros2_aruco_interfaces/msg/detail/: aruco_markers__functions.c  aruco_markers__type_support.c  aruco_markers__type_support.cpp
install/ros2_aruco_interfaces/share/ros2_aruco_interfaces/: package.sh  package.xml
log/: latest_build
src/alg1_pkg/: CMakeLists.txt  package.xml
src/alg1_pkg/src/: alg1_code.cpp
src/cnn_pkg/: CMakeLists.txt
src/cnn_pkg/src/: get_aruco_code.cpp  get_frames_code.cpp  send_frames_code.cpp  sort_dataset_code.cpp
src/cnn_pkg/src/dev/: cnn_code.cpp  cnn_script.py  obj_detection.py
src/cnn_pkg/teste/: resize.py  sort.py  sort_dataset_code_normal.cpp  teste.py
src/dnn_pkg/: CMakeLists.txt
src/dnn_pkg/src/: dnn_code.cpp
